unpackaged/main/default/objects/CRC_Request_Approval__c/CRC_Request_Approval__c.object-meta.xml
<CustomObject>
    <label>CRC Request Approval</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Approval Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRC Request Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>