unpackaged/main/default/objects/CRC_Request_Approval__c/fields/CRC_Request__c.field-meta.xml
<CustomField>
    <fullName>CRC_Request__c</fullName>
    <label>Request</label>
    <referenceTo>CPEC_Request__c</referenceTo>
    <relationshipLabel>CRC Request Approvals</relationshipLabel>
    <relationshipName>CPEC_Request_Endorsements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>