unpackaged/main/default/objects/CRC_Request_Approval__c/fields/Endorsed__c.field-meta.xml
<CustomField>
    <fullName>Endorsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endorsed</label>
    <type>Checkbox</type>
</CustomField>