unpackaged/main/default/objects/CRC_Request_Approval__c/fields/Endorsement_URL__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_URL__c</fullName>
    <formula>$Setup.T1_Control_Settings__c.Internal_URL__c &amp; &quot;/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endorsement URL</label>
    <type>Text</type>
</CustomField>