unpackaged/main/default/objects/CRC_Request_Approval__c/fields/Endorser__c.field-meta.xml
<CustomField>
    <fullName>Endorser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endorser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPEC_Request_Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>