unpackaged/main/default/objects/CRC_Request_Approval__c/fields/Endorser_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Endorser_FirstName__c</fullName>
    <formula>Endorser__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endorser FirstName</label>
    <type>Text</type>
</CustomField>