unpackaged/main/default/objects/CRC_Request_Approval__c/fields/Request_Info__c.field-meta.xml
<CustomField>
    <fullName>Request_Info__c</fullName>
    <formula>&#39;Account: &#39; &amp; CRC_Request__r.Account__c &amp; BR() &amp; &#39;Requested By: &#39; &amp;  &#39;name here&#39; &amp;  BR() &amp;  &#39;Status: &#39; &amp;  TEXT(CRC_Request__r.Request_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Info</label>
    <type>Text</type>
</CustomField>