unpackaged/main/default/objects/CRC_Request_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CRC_Request__c</columns>
    <columns>Endorser__c</columns>
    <columns>Endorsed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>